# akinator

Akinator_main/: A_Main.h  Alladin_ma.cpp  a.out  add_wiki.cpp  add_wiki.h  akin_dump_0.dot  akin_dump_1.dot  akin_dump_3.dot  akin_dump_90.dot  app  base_of_the_base.txt  chitalka.cpp  chitalka.h  constr_distr.cpp  constr_distr.h  defenition.cpp  defenition.h  for_video_frag.cpp  for_video_frag.h  makefile  printing.cpp  printing.h  sf_ml_ka.cpp  sf_ml_ka.h  sortigent_vid.cpp  sortigent_vid.h
Akinator_main/a.out.dSYM/Contents/Resources/DWARF/: a.out
a.out.dSYM/Contents/Resources/DWARF/: a.out
sfml/: CMakeLists.txt  app
sfml/src/: Info.plist  for_sfml.h  main.cpp
